--- a/src/assets/public_css/index.css
+++ b/src/assets/public_css/index.css
@@ -10,7 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   min-height: 100%;
     overflow-x:hidden;
-	-webkit-tap-highlight-color:rgba(0,0,0,0);	/*禁止链接高亮*/ 	
+	-webkit-tap-highlight-color:rgba(0,0,0,0);	/*禁止链接高亮*/
 	-webkit-touch-callout:none;	/*禁止链接长按弹出选项*/
     background-color:#f5f5f9;
     line-height:normal !important;
@@ -31,15 +31,10 @@ code {
   width: 100%;
   height: 100%;
   position: relative;
-  display: flex;
   overflow: hidden;
 }
 
-#check{
-  display: none;
-}
-
-label .navBtn,label .cancelBtn{
+.navBtn{
   position: absolute;
   cursor: pointer;
   border-radius: 10%;
@@ -47,16 +42,13 @@ label .navBtn,label .cancelBtn{
   -moz-border-radius: 10%;
   -ms-border-radius: 10%;
   -o-border-radius: 10%;
-}
-
-.navBtn{
-  left: 100px;
-  top: 50px;
-  width: 30px;
-  height: 30px;
+  top: 5%;
+  left: 9%;
+  width: 2%;
+  height: 4%;
   padding: 3px 6px;
   background: #042331;
-  z-index: 99;
+  z-index: 9;
   transition: all 0.7s ease;
   -webkit-transition: all 0.7s ease;
   -moz-transition: all 0.7s ease;
@@ -64,51 +56,13 @@ label .navBtn,label .cancelBtn{
   -o-transition: all 0.7s ease;
 }
 
-.cancelBtn{
-  left: -2.5%;
-  top:1.5%;
-  width: 20px;
-  height: 20px;
-  padding: 3px;
-  background:  #0b4866;
-  z-index: 100;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.7s ease;
-  -webkit-transition: all 0.7s ease;
-  -moz-transition: all 0.7s ease;
-  -ms-transition: all 0.7s ease;
-  -o-transition: all 0.7s ease;
-}
-
-#check:checked ~ .tabContainer{
-  left: 0;
-}
-
-#check:checked ~ label .navBtn{
-  left: 12%;
-  opacity: 0;
-  pointer-events: none;
-}
-
-#check:checked ~ label .cancelBtn{
-  left: 16.5%;
-  top: 1.5%;
-  opacity: 1;
-  pointer-events: all;
-}
-
-#check:checked ~ .background{
-  margin-left: 19%;
-}
 
 .tabContainer{
   position: absolute;
   height: 100%;
   left: -19%;
   width: 19%;
-  display: inline-block;
-  z-index: 1;
+  z-index: 10;
   overflow: auto;
   text-align: center;
   background-color: #063549;
@@ -120,6 +74,10 @@ label .navBtn,label .cancelBtn{
 }
 
 .tabContainer .tabHeader{
+  position: relative;
+  z-index: 8;
+  width: 100%;
+  height: 70px;
   line-height: 70px;
   font-size: 16px;
   font-weight: bold;
@@ -127,6 +85,32 @@ label .navBtn,label .cancelBtn{
   color: #fff;
   background-color: #0b4866;
 }
+
+
+.tabContainer .tabHeader .cancelBtn{
+  position: absolute;
+  cursor: pointer;
+  border-radius: 10%;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  -ms-border-radius: 10%;
+  -o-border-radius: 10%;
+  top: 5%;
+  right: 1%;
+  width: 10%;
+  height: 20%;
+  padding: 3px 0px;
+  background:  #0b4866;
+  z-index: 100;
+  opacity: 1;
+  transition: all 0.7s ease;
+  -webkit-transition: all 0.7s ease;
+  -moz-transition: all 0.7s ease;
+  -ms-transition: all 0.7s ease;
+  -o-transition: all 0.7s ease;
+
+}
+
 
 .tabContainer ul{
   font-size: 12px;
@@ -212,3 +196,63 @@ label .navBtn,label .cancelBtn{
   background-position: center;
 }
 
+@media (max-device-width: 1024px) {
+  .navBtn{
+    width: 25px;
+    height: 25px;
+  }
+
+  .cancelBtn{
+    width: 21px;
+    height: 21px;
+  }
+}
+
+@media (max-device-width: 414px) {
+  .navBtn{
+    width: 15px;
+    height: 15px;
+  }
+
+  .cancelBtn{
+    width: 13px;
+    height: 13px;
+  }
+
+  .tabContainer ul div.tabActive{
+    padding-left: 10%;
+    border: 2px solid #395c6e;
+  }
+
+
+  .tabContainer{
+    position: absolute;
+    height: 60%;
+    left: -100%;
+    width: 100%;
+    z-index: 1;
+    overflow: auto;
+    text-align: center;
+    background-color: #063549;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    font-size: 10px;
+  }
+
+  .backgroundImg{
+    position: absolute;
+    background: url('../images/highway_vertical-02.png') no-repeat;
+    background-position: center;
+    background-size: 100%;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+  }
+
+
+}
