--- a/src/components/parallaxScroll_1/parallaxScroll_1.module.css
+++ b/src/components/parallaxScroll_1/parallaxScroll_1.module.css
@@ -1,4 +1,4 @@
-#area{
+.areaWrapper{
   width: 50%;
   height: 60%;
   position: absolute;
@@ -10,6 +10,20 @@
   -ms-transform:translate(-50%,-50%);
   -o-transform:translate(-50%,-50%);
   background: rgb(78, 74, 74);
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  overflow: hidden;
+
+  transition: all 1s;
+}
+
+#area{
+  width: 100%;
+  height: 100%;
+  position: absolute;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -41,7 +55,7 @@
   left: 0;
   top: 0;
   background-image: url('./images/valley.png');
-  background-size: 120%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
   overflow: hidden;
@@ -100,6 +114,7 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   cursor: pointer;
+  z-index: 12;
 }
 
 
@@ -123,4 +138,37 @@
   background-size: 80%;
   background-position: center;
   opacity: 0;
+}
+
+@media (max-device-width: 414px) {
+  .areaWrapper{
+    width: 100%;
+    height: 45%;
+  }
+
+  .mountain-peak{
+    height : 60%;
+  }
+}
+
+@media (device-width: 768px) {
+  .areaWrapper{
+    width: 80%;
+    height: 50%;
+  }
+
+  .mountain-peak{
+    height : 60%;
+  }
+}
+
+@media (device-width: 1024px) {
+  .areaWrapper{
+    width: 80%;
+    height: 50%;
+  }
+
+  .mountain-peak{
+    height : 60%;
+  }
 }
